# bifrost_amrfinderplus

./: .gitignore  Dockerfile  HISTORY.md  Makefile  README.md  custom_install.sh  environment.yml  install.sh  setup.cfg  setup.py
.github/workflows/: amrfinder_workflow.yml
bifrost_amrfinderplus/: __main__.py  config.yaml  datadump.py  launcher.py  pipeline.smk
test/: AMRfinder.md5
tests/: SRR26510933_assembly.fasta  test_simple.py
