[bumpversion]
current_version = 1.0.1
serialize = {major}.{minor}.{patch}
commit = True
tag = True

[metadata]
description-file = README.md

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:bifrost_amrfinderplus/config.yaml]
search = {current_version}
replace = {new_version}

[bumpversion:file:bifrost_amrfinderplus/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[tool:pytest]
minversion = 6.0
addopts = -ra -q
testpaths = 
	tests
